src/test/deca/context/invalid/provided/expects_field.deca
class A {}
{
int x = 0;
A a = new A();
int y = a.x;
}
